# dj_library_manager

./: LICENSE  README.md  __init__.py  audio_reader.py  database.py  db_upgrade.py  dj_library.db  fingerprint.py  logging_utils.py  main.py  metadata_utils.py  pyproject.toml  scan_report.py  update_checker.py
.github/workflows/: publish.yml
dj_library_manager/: audio_reader.py  database.py  db_upgrade.py  fingerprint.py  logging_utils.py  main.py  metadata_utils.py  scan_report.py
